# optiminf

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
doc/: Doxyfile.in  mainpage.dox
example/config/: demo_config.yaml
example/src/: demo_application.cpp
include/optiminf/calculation_cache/: calculation_cache_manager_base.h
include/optiminf/constraints/: constraint_base.h  constraint_bound.h  constraint_manager.h
include/optiminf/costs/: cost_base.h  cost_manager.h
include/optiminf/data_structs/: calculation_result.h  manager_container.h  nlp_data.h
include/optiminf/error_handling/: optiminf_exception.h
include/optiminf/export/: exporter_base.h
include/optiminf/nlp_manager/: nlp_manager.h
include/optiminf/preparation/: preparation_manager_base.h
include/optiminf/setup/: setup_manager_base.h
include/optiminf/solver_interface/: solver_interface_base.h  solver_result_status.h
include/optiminf/solver_interface/ipopt/: ipopt_interface.h
include/optiminf/splines/: hermite_spline.h
include/optiminf/util/: eigen_util.h  file_system_util.h  parameter_naming_util.h
src/: calculation_cache_manager_base.cpp  calculation_result.cpp  constraint_base.cpp  constraint_bound.cpp  constraint_manager.cpp  cost_base.cpp  cost_manager.cpp  exporter_base.cpp  file_system_util.cpp  hermite_spline.cpp  ipopt_interface.cpp  nlp_manager.cpp  optiminf_exception.cpp  parameter_naming_util.cpp  preparation_manager_base.cpp  setup_manager_base.cpp  solver_interface_base.cpp  solver_result_status.cpp
test/include/optiminf/test/: dummy_solver_interface.h  simple_calculation_cache.h  simple_cc_view.h  simple_constraint.h  simple_cost.h  simple_exporter.h  simple_preparation_manager.h  unit_test_setup_manager.h
test/src/: hermite_spline_test.cpp  integration_test.cpp  util_test.cpp
test/src/test_classes/: dummy_solver_interface.cpp  simple_calculation_cache.cpp  simple_constraint.cpp  simple_cost.cpp  simple_exporter.cpp  simple_preparation_manager.cpp  unit_test_setup_manager.cpp
test/test_config/: test_config.yaml
test/test_data/: HermiteSplineTest_sparsity_pattern.csv
