<?xml version="1.0"?>
<package format="2">
  <name>optiminf</name>
  <version>1.0.0</version>
  <description>The optiminf package</description>

  <maintainer email="biemueller@sim.tu-darmstadt.de">Felix Biemüller</maintainer>
  <maintainer email="gutte@sim.tu-darmstadt.de">Alexander Gutte</maintainer>

  <license>MIT</license>

  <author email="biemueller@sim.tu-darmstadt.de">Felix Biemüller</author>
  <author email="gutte@sim.tu-darmstadt.de">Alexander Gutte</author>

  <depend>paraminf</depend>
  <depend>autojac</depend>
  
  <test_depend>gtest</test_depend>

  <doc_depend>doxygen</doc_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
